# Polymarket---Mise-en-production

./: .env.example  .gitignore  DEVELOPMENT.md  README.md  conftest.py  docker-compose.yml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/backend/: .dockerignore  Dockerfile  requirements.txt
app/backend/api/: main.py
app/backend/database/: __init__.py  database.py  models.py
app/configs/fixtures/: portfolios.json  users.json
app/frontend/: Dockerfile  config.py  main.py  requirements.txt
app/frontend/utils/: api_client.py  portfolio_math.py  session.py  styles.py  ui.py
app/tests/: test_api_client_mock.py  test_config.py  test_portfolio_math.py
app/utils/: api_client.py  portfolio_math.py  styles.py
app/views/: __init__.py  account.py  history.py  login.py  metrics.py  portfolio.py  trading.py
docs/api/: README.md  openapi.yaml
shared/: README.md  pyproject.toml
shared/app_shared/: __init__.py
shared/app_shared/config/: __init__.py  settings.py
shared/app_shared/database/: __init__.py  base.py  database.py  models.py
shared/app_shared/database/migrations/: __init__.py
shared/app_shared/database/migrations/versions/: __init__.py  m0001_initial_schema.py  m0002_expand_markets_table.py  m0003_legacy_is_active_compat.py  m0004_legacy_text_columns.py  m0005_ingestion_batches.py  m0006_users_password_hash.py  m0007_portfolio_trading_tables.py  m0007_portfolios_and_trades.py
shared/app_shared/schemas/: __init__.py  market.py
worker/: Dockerfile  __init__.py  requirements.txt
worker/app/: __init__.py  main.py
(+48 files in other folders)
